--- a/internal/static/index.html
+++ b/internal/static/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <title>Document</title>
 
     <style>
@@ -28,6 +30,14 @@
             border: none;
             width: 200px;
         }
+
+        button > .fa {
+            display: none;
+        }
+
+        .loading .fa {
+            display: inline-block;
+        }
     </style>
 
 
@@ -38,6 +48,11 @@
             // coordinates of Kremlin (Moscow)
             const lat = '55.7520'
             const lng = '37.6175'
+            const button = document.getElementById('button')
+            button.disabled = true
+            button.classList.add('loading')
+
+
             const response = await fetch(`/getEstimation?lat=${lat}&lng=${lng}`, {
                 method: 'GET',
                 headers: {
@@ -47,12 +62,18 @@
 
             const data = await response.json()
 
+            button.disabled = false
+            button.classList.remove('loading')
             document.getElementById('info').innerHTML = `The nearest 🚕 will arrive in ${data} minutes`
+            
         }
     </script>
     <div class="form">
         <h2 id="info">🚕🚕🚕</h2>
-        <button onclick="handleGetPrediction()">Find nearest car</button>
+        <button id="button" onclick="handleGetPrediction()">
+            Find nearest car
+            <i class="fa fa-spinner fa-spin"></i>
+        </button>
     </div>
 </body>
 </html>
